--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,12 @@ version: 0.1.11
 homepage: https://github.com/aloisdeniel/bluff
 
 environment:
-  sdk: '>=2.6.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  meta: ^1.1.8
-  universal_html: ^1.1.12
+  universal_html: ^2.0.8
   path: ^1.6.4
 
 dev_dependencies:
-  pedantic: ^1.8.0
+  extra_pedantic: ^1.5.0
   test: ^1.6.0
